@SpellarBot fixed 11 typos for you :)

--- a/_posts/2016-07-31-July 2016 Summary.md
+++ b/_posts/2016-07-31-July 2016 Summary.md
@@ -17,11 +17,11 @@ Soon, I designed a system called sams.
 It means Student Attendance Management System.
 Not very difficult, I just make step and imitate partly dms.
 
-In this system, I especilly think about the model,clean,tidy, even MVC mind.
+In this system, I especially think about the model,clean,tidy, even MVC mind.
 
 But U think much, the things need to consider are more. U need to spend more time. I also overwhelmed adding too many functions to it.
 
-U will see, page code is little, just threee part:
+U will see, page code is little, just three part:
 1. require
 2. describe info
 3. a function, or two
